syntax = "proto3";

package com.dbmapp.grpc;

service CSVImport {
  // Unary RPC to fetch CSV headers
  rpc GetCSVHeaders(CSVFileRequest) returns (CSVHeadersResponse);

  // Client streaming RPC to import rows of data
  rpc ImportCSV(stream CSVImportRequest) returns (ConfirmationMessage);
}

// Request to get headers from a CSV file
message CSVFileRequest {
  string file_path = 1;
}

// Response containing CSV headers
message CSVHeadersResponse {
  repeated string headers = 1;
}

// Streaming message with CSV row data
message CSVImportRequest {
  string schema_name = 1;
  string table_name = 2;
  repeated string values = 3;

  // âœ… Optional field to help track which line is being processed
  int32 line_number = 4;
}

// Generic confirmation message
message ConfirmationMessage {
  bool ok = 1;
  string message = 2;
}
